--- a/looking-glass-client/build
+++ b/looking-glass-client/build
@@ -1,4 +1,4 @@
-!#/bin/bash
+#!/bin/bash
 rm -rf LookingGlass looking-glass-client-B5.0.1
 
 git clone --recursive https://github.com/gnif/LookingGlass.git -b B5.0.1
