--- a/looking-glass-client/looking-glass-client.desktop
+++ b/looking-glass-client/looking-glass-client.desktop
@@ -5,3 +5,4 @@ Icon=/usr/share/pixmaps/looking-glass-client.png
 Exec=/usr/bin/looking-glass-client win:size=1920x1080 -S -k -m KEY_F12
 Categories=System
 Terminal=false
+X-Desktop-File-Install-Version=0.27
